feat: exercise not working

--- a/index.html
+++ b/index.html
@@ -3,9 +3,29 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="style.css">
+  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
   <title>js-dom-1</title>
 </head>
 <body>
+
+
+  <main>
+    <div class=" box-center">
+      <div class="container">
+        <div class="half">
+          <div class="box-sx">
+            <img class="lamp-spenta" src="./img/white_lamp.png" alt="">
+            <img class="lamp-accesa" src="./img/yellow_lamp.png" alt="">
+          </div>
+          <div class="box-dx">
+            <button class="btn">Accendi la lampadina</button>
+            <button class="btn-a">Accendi la lampadina</button>
+          </div>
+        </div>
+      </div>
+    </div>
+  </main>
   
   <script src="script.js"></script>
 </body>
