feat: exercise completed

--- a/index.html
+++ b/index.html
@@ -15,12 +15,10 @@
       <div class="container">
         <div class="half">
           <div class="box-sx">
-            <img class="lamp-spenta" src="./img/white_lamp.png" alt="">
-            <img class="lamp-accesa" src="./img/yellow_lamp.png" alt="">
+            <img id="lamp" src="./img/white_lamp.png" alt="">
           </div>
           <div class="box-dx">
-            <button class="btn">Accendi la lampadina</button>
-            <button class="btn-a">Accendi la lampadina</button>
+            <button id="btn">Accendi la lampadina</button>
           </div>
         </div>
       </div>
